# dippa-bench

./: .gitignore  .gitmodules  bench.cabal  plot.gp  stack.yaml
results/: regression.r
scripts/: abbreviate.sh  remove-up-to-last-import.sh
src/: Bench.hs  Freer.hs  Latex.hs  Main.hs  Mtl.hs  Plot.hs  Regression.hs
src/Classes/: Countdown.hs  Cross.hs  Exception.hs  RSABS.hs  RSABSTH.hs  Reader.hs  State.hs  StateTH.hs  StateWriter.hs  Writer.hs
src/Common/: ErrCode.hs  NQueens.hs
src/Effects/: Countdown.hs  NQueens.hs
src/Extensible/: Countdown.hs  Exception.hs  NQueens.hs  Reader.hs  State.hs  StateWriter.hs  Writer.hs
src/Freer/: Countdown.hs  Cross.hs  Exception.hs  NQueens.hs  RSABS.hs  RSABSTH.hs  Reader.hs  State.hs  StateTH.hs  StateWriter.hs  Writer.hs
src/Mtl/: Countdown.hs  Cross.hs  Exception.hs  NQueens.hs  RSABS.hs  RSABSTH.hs  Reader.hs  State.hs  StateTH.hs  StateWriter.hs  Writer.hs
