name:                bench
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/bench#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable bench
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Bench
                     , Common.NQueens
                     , Effects.Countdown
                     , Effects.NQueens
                     , Extensible.Countdown
                     , Extensible.Exception
                     , Extensible.NQueens
                     , Extensible.State
                     , Freer.Countdown
                     , Freer.Exception
                     , Freer.NQueens
                     , Freer.State
                     , Mtl.Countdown
                     , Mtl.Exception
                     , Mtl.NQueens
                     , Mtl.State
                     , Plot
  default-language:    Haskell2010
  ghc-options:         -W -O2
  build-depends:       base >= 4.7 && < 5
                     , criterion
                     , mtl
                     , transformers
                     , binary
                     , bytestring
                     , optparse-generic
                     , text
                     , statistics
                     , cassava
                     , freer
                     , Chart
                     , Chart-cairo
                     , colour
                     , effects
                     , extensible-effects
                     , containers
