name:                bench
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/bench#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable bench
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Bench
                     , Classes.State
                     , Classes.Cross
                     , Classes.Exception
                     , Classes.Reader
                     , Classes.RSABS
                     , Classes.RSABSTH
                     , Classes.Writer
                     , Common.ErrCode
                     , Freer.State
                     , Freer.Cross
                     , Freer.Exception
                     , Freer.Reader
                     , Freer.RSABS
                     , Freer.RSABSTH
                     , Freer.Writer
                     , Latex
                     , Mtl.State
                     , Mtl.Cross
                     , Mtl.Exception
                     , Mtl.Reader
                     , Mtl.RSABS
                     , Mtl.RSABSTH
                     , Mtl.Writer
                     , Plot
                     , Regression
  default-language:    Haskell2010
  ghc-options:         -W -O2 -threaded
  build-depends:       base >= 4.7 && < 5
                     , criterion
                     , mtl
                     , transformers
                     , binary
                     , bytestring
                     , optparse-generic
                     , text
                     , statistics
                     , cassava
                     , freer
                     , Chart
                     , Chart-cairo
                     , colour
                     , effects
                     , extensible-effects
                     , containers
                     , monad-classes
                     , data-default
                     , lens
                     , directory
                     , abstract-par
                     , deepseq
                     , HaTeX
                     , text-format
                     , template-haskell
                     , cassava
                     , vector
                     , split
